[#460] improvement: Exit on OutOfMemoryError (#1390)
### What changes were proposed in this pull request?

Exit on OutOfMemoryError to specify JVM options 

### Why are the changes needed?

Fix: https://github.com/apache/incubator-uniffle/issues/460

### Does this PR introduce _any_ user-facing change?

No.

### How was this patch tested?

Tested on production env